--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <source src="./app.js" type="">
+    <script src="./app.js"></script>
     <title>Document</title>
 </head>
 <body>
